--- a/[Retaliation Gaming]/RG_HTML/html/style.css
+++ b/[Retaliation Gaming]/RG_HTML/html/style.css
@@ -1,27 +1,27 @@
 /* This applies to all elements (bad practice) */
 * {
 	color: #fff;
-	font-family: Arial, Helvetica, sans-serif;
-/* 	background-image: url("ref/ref.jpg");
-/* 	background-position: center; /* Center the image */
-/* 	background-repeat: no-repeat; /* Do not repeat the image */
-/* 	background-size: cover; /* Resize the background image to cover the entire container */
+	/*font-family: Arial, Helvetica, sans-serif;
+	background-image: url("ref/ref.jpg");
+	background-position: center; /* Center the image */
+	/*background-repeat: no-repeat; /* Do not repeat the image */
+	/*background-size: cover; /* Resize the background image to cover the entire container */
 }
 
 /* This css centers at the middle of the screen */
 #container {
-	padding: 5px;
-	text-shadow: 2px 2px 5px #424242;
+	padding: 3px;
+	text-shadow: 0.2px 0.2px 0.2px #fff;
     position: absolute;
-    color: rgb(241, 235, 235);
-    top: 70%;
+    color:#fff;
+    top: 72%;
     left: 92%;
     transform: translate(-50%,-50%);
     font-size: 13px;
 	text-align: center;
-	background-color: #272727;
-	border-radius: 25px;
-	border: 2px solid #dad9d9 ;
+	background-color: #0d0f0c;
+	border-radius: 15px;
+	border: 2px solid #000000;
 }
 
 .small {
