--- a/[Retaliation Gaming]/RG_HTML/html/style.css
+++ b/[Retaliation Gaming]/RG_HTML/html/style.css
@@ -11,7 +11,6 @@
 /* This css centers at the middle of the screen */
 #container {
 	padding: 3px;
-	text-shadow: 0.2px 0.2px 0.2px #fff;
     position: absolute;
     color:#fff;
     top: 72%;
@@ -42,8 +41,8 @@
 	border-width:0px;
 	overflow:hidden;
 	word-break:normal;
-
 }
+
 .tg th{
 	font-family:"Times New Roman";
 	font-size:13px;
@@ -61,7 +60,7 @@
 }
 
 .tg .tg-0agl {
-	font-weight:bold;
+	font-weight:normal;
 	font-size:13px;
 	font-family:"Times New Roman";
 	text-align:center;
