--- a/[Retaliation Gaming]/RG_HTML/html/style.css
+++ b/[Retaliation Gaming]/RG_HTML/html/style.css
@@ -23,6 +23,20 @@
 	border: 2px solid #000000;
 }
 
+#container2 {
+	padding: 3px;
+    position: absolute;
+    color:#fff;
+    top: 10%;
+    left: 15%;
+    transform: translate(-50%,-50%);
+    font-size: 15px;
+	text-align: center;
+	background-color: #0d0f0c;
+	border-radius: 15px;
+	border: 2px solid #000000;
+}
+
 .small {
 	font-size: 25px;
 }
@@ -71,3 +85,6 @@
 	text-align:left;
 	vertical-align:top
 }
+
+
+.tg2  {border-collapse:collapse;border-spacing:0;border-color:#aabcfe;}
