--- a/[Retaliation Gaming]/RG_HTML/html/style.css
+++ b/[Retaliation Gaming]/RG_HTML/html/style.css
@@ -1,90 +1,86 @@
-/* This applies to all elements (bad practice) */
-* {
-	color: #fff;
-	/*font-family: Arial, Helvetica, sans-serif;
-	background-image: url("ref/ref.jpg");
-	background-position: center; /* Center the image */
-	/*background-repeat: no-repeat; /* Do not repeat the image */
-	/*background-size: cover; /* Resize the background image to cover the entire container */
+@font-face {
+	font-family: crock;
+	src: url(crock.ttf);
 }
 
-/* This css centers at the middle of the screen */
 #container {
-	padding: 3px;
-    position: absolute;
-    color:#fff;
-    top: 72%;
-    left: 92%;
-    transform: translate(-50%,-50%);
-    font-size: 13px;
-	text-align: center;
-	background-color: #0d0f0c;
-	border-radius: 15px;
-	border: 2px solid #000000;
+	position: absolute;
+	right: 30px;
+	bottom: 30px;
+	width: 25vw;
+	height: 50px;
 }
 
-#container2 {
-	padding: 3px;
-    position: absolute;
-    color:#fff;
-    top: 10%;
-    left: 15%;
-    transform: translate(-50%,-50%);
-    font-size: 15px;
-	text-align: center;
-	background-color: #0d0f0c;
-	border-radius: 15px;
-	border: 2px solid #000000;
-}
-
-.small {
+#money {
+	font-family: crock;
 	font-size: 25px;
+	color: white;
+	padding: 4px;
+	width: 100%;
+	text-shadow:
+		-0.5px -0.5px 0 #000,
+		0.5px -0.5px 0 #000,
+		-0.5px 0.5px 0 #000,
+		0.5px 0.5px 0 #000;
 }
 
-.tg {
-	border-collapse:collapse;
-	border-spacing:0;
-	border:none;
+#started {
+	font-family: 'roboto';
+	color: white;
+	position: absolute;
+	left: 20%;
+	top: 5%;
+	width: 60%;
+	background: rgba(40, 40, 40, 0.8);
 }
 
-.tg td{ 
-	font-family:"Times New Roman";
-	font-size:13px;
-	padding:10px 5px;
-	border-style:solid;
-	border-width:0px;
-	overflow:hidden;
-	word-break:normal;
+#money > div {
+	float: right;
+	margin-right: 10px;
 }
 
-.tg th{
-	font-family:"Times New Roman";
-	font-size:13px;
-	font-weight:normal;
-	padding:10px 5px;
-	border-style:solid;
-	border-width:0px;
-	overflow:hidden;
-	word-break:normal;
+#idk {
+	margin-right: 20px;
 }
 
-.tg .tg-baqh {
-	text-align:center;
-	vertical-align:top
+#money2 {
+	margin: 0 auto;
+	width: 100%;
+	text-align: center;
+	font-family: crock;
+	font-size: 25px;
+	color: white;
+	padding: 4px;
+	text-shadow:
+		-0.5px -0.5px 0 #000,
+		0.5px -0.5px 0 #000,
+		-0.5px 0.5px 0 #000,
+		0.5px 0.5px 0 #000;
 }
 
-.tg .tg-0agl {
-	font-weight:normal;
-	font-size:13px;
-	font-family:"Times New Roman";
-	text-align:center;
-	vertical-align:top
+.fas {
+	color: #5e1918;
+	font-weight: 900;
+	margin-right: 6px;
 }
 
-.tg .tg-0lax {
-	text-align:left;
-	vertical-align:top
+.tiny {
+	font-size: 25px;
+	position: absolute;
+	right: 30px;
+	bottom: 80px;
 }
 
+.tiny2 {
+	font-size: 32px;
+	width: 100%;
+	right: 30px;
+	bottom: 80px;
+}
 
-.tg2  {border-collapse:collapse;border-spacing:0;border-color:#aabcfe;}
+.tiny3 {
+	font-size: 24px;
+	width: 100%;
+	right: 30px;
+	bottom: 80px;
+}
